--- a/ProtoRabbit/Pages/MainPage.xaml
+++ b/ProtoRabbit/Pages/MainPage.xaml
@@ -59,8 +59,7 @@
 
     <Grid RowDefinitions="Auto, Auto, Auto, *"
           RowSpacing="20"
-          Margin="10"
-          BackgroundColor="DarkCyan">
+          Margin="10">
 
         <VerticalStackLayout Grid.Row="0"
                              Spacing="25"
@@ -157,10 +156,12 @@
 
             <Entry Placeholder="Exchange"
                        ToolTipProperties.Text="Exchange"
+                       WidthRequest="700"
                        Text="{Binding Exchange}"
                        Style="{StaticResource ParameterEntryStyle}" />
             <Entry Placeholder="Routing Key"
                        ToolTipProperties.Text="Routing Key"
+                       WidthRequest="700"
                        Text="{Binding RoutingKey}"
                        Style="{StaticResource ParameterEntryStyle}" />
 
@@ -212,7 +213,6 @@
                  ColumnSpacing="10"
                 VerticalOptions="Fill"
                 IsVisible="{Binding Connected}"
-                BackgroundColor="DarkSlateBlue"
                 Padding="10">
             <BoxView Grid.Row="0"
                      Grid.Column="0"
@@ -231,8 +231,7 @@
                                     SelectionMode="Single"
                                     ItemsSource="{Binding Subscriptions}"
                                     SelectedItem="{Binding CurrentSubscription}"
-                                    SelectionChangedCommand="{Binding SelectedSubscriptionChangedCommand}"
-                                    BackgroundColor="DarkGoldenrod">
+                                    SelectionChangedCommand="{Binding SelectedSubscriptionChangedCommand}">
                 <CollectionView.Header>
                     <HorizontalStackLayout >
                         <Label Margin="10,0"
@@ -259,9 +258,14 @@
                                        Style="{StaticResource SubscriptionLabelStyle}"/>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
-                <CollectionView.EmptyView>
-                    <Label Text="None"
-                               FontSize="Small"/>
+                 <CollectionView.EmptyView>
+                    <Grid>
+                        <Label Text="No subscriptions"
+                               FontSize="Small"
+                               VerticalOptions="Center"
+                               HorizontalOptions="Center"
+                               TextColor="LightGray"/>
+                    </Grid>
                 </CollectionView.EmptyView>
             </CollectionView>
 
@@ -277,16 +281,15 @@
                                     VerticalScrollBarVisibility="Always"
                                     VerticalOptions="FillAndExpand"
                                     ItemsUpdatingScrollMode="KeepLastItemInView"
-                                    ItemsSource="{Binding CurrentSubscriptionMessages}"
-                                    BackgroundColor="DarkGreen">
+                                    ItemsSource="{Binding CurrentSubscriptionMessages}">
                 <CollectionView.Header>
-                    <HorizontalStackLayout >
+                    <VerticalStackLayout>
                         <Label Margin="10,0"
                                        Text="Messages"
                                        FontSize="Default"
                                        FontAttributes="Bold"
-                                       VerticalOptions="Center"/>
-                    </HorizontalStackLayout>
+                                       />
+                    </VerticalStackLayout>
                 </CollectionView.Header>
                 <CollectionView.ItemsLayout>
                     <LinearItemsLayout Orientation="Vertical"
@@ -299,8 +302,13 @@
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
                 <CollectionView.EmptyView>
-                    <Label Text="None"
-                               FontSize="Small"/>
+                    <Grid>
+                        <Label Text="No messages"
+                               FontSize="Small"
+                               VerticalOptions="Center"
+                               HorizontalOptions="Center"
+                               TextColor="LightGray"/>
+                    </Grid>
                 </CollectionView.EmptyView>
             </CollectionView>
 
